==> vermar/open-sensor-platform/embedded/projects/Discovery_F4_MP3/Sources/BoardSupport/hw_setup.c <==
#include "common.h"
#include "hw_setup.h"
#include "debugprint.h"

static void UartDMAConfiguration( UARThandle_t *phUart )
{
    /* Configure the DMA handler for Transmission process */
    gDbgUartPort.hDMA->Instance                 = DBG_UART_TX_DMA_STREAM;
    gDbgUartPort.hDMA->Init.Channel             = DBG_UART_TX_DMA_CHANNEL;
    gDbgUartPort.hDMA->Init.Direction           = DMA_MEMORY_TO_PERIPH;
    gDbgUartPort.hDMA->Init.PeriphInc           = DMA_PINC_DISABLE;
    gDbgUartPort.hDMA->Init.MemInc              = DMA_MINC_ENABLE;
    gDbgUartPort.hDMA->Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
    gDbgUartPort.hDMA->Init.MemDataAlignment    = DMA_MDATAALIGN_BYTE;
    gDbgUartPort.hDMA->Init.Mode                = DMA_NORMAL;
    gDbgUartPort.hDMA->Init.Priority            = DMA_PRIORITY_LOW;
    gDbgUartPort.hDMA->Init.FIFOMode            = DMA_FIFOMODE_DISABLE;
    gDbgUartPort.hDMA->Init.FIFOThreshold       = DMA_FIFO_THRESHOLD_FULL;
    gDbgUartPort.hDMA->Init.MemBurst            = DMA_MBURST_INC4;
    gDbgUartPort.hDMA->Init.PeriphBurst         = DMA_PBURST_INC4;

    HAL_DMA_Init(gDbgUartPort.hDMA);

    /* Associate the initialized DMA handle to the UART handle */
    __HAL_LINKDMA(phUart, hdmatx, *gDbgUartPort.hDMA);
}

void LED_Init( void )
{
    GPIO_InitTypeDef  GPIO_InitStructure;
    uint8_t index;

    if (NUM_LEDS > 0)
    {
        for (index = 0; index < NUM_LEDS; index++)
        {
            RCC_GPIO_CLK_ENABLE( DiagLEDs[index].rccPeriph );
            GPIO_InitStructure.Pin = DiagLEDs[index].pin;
            GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
            GPIO_InitStructure.Pull = GPIO_NOPULL;
            GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
            HAL_GPIO_Init(DiagLEDs[index].grp, &GPIO_InitStructure);
        }
    }
}

void RTC_Configuration( void )
{
    RCC_ClkInitTypeDef sClokConfig;
    uint32_t TimerClk, APB1Prescaler = 0;
    uint32_t pFLatency;
    uint32_t PrescalerValue = 0;

    RTC_TIMER_CLK_EN();

    /* Get clock configuration */
    HAL_RCC_GetClockConfig(&sClokConfig, &pFLatency);

    /* Get APB1 prescaler */
    APB1Prescaler = sClokConfig.APB1CLKDivider;

    /* Compute RTC Timer clock */
    if (APB1Prescaler == 0) 
    {
        TimerClk = HAL_RCC_GetPCLK1Freq();
    }
    else
    {
        TimerClk = 2*HAL_RCC_GetPCLK1Freq();
    }

    /* Compute the prescaler value to have timer counter clock tick at RTC Tick rate */
    PrescalerValue = (uint32_t) ((TimerClk / 1000000) * US_PER_RTC_TICK - 1);

    /* Time base configuration */
    htim.Instance = RTC_TIMER;
    htim.Init.Period = 0xFFFFFFFF;
    htim.Init.Prescaler = PrescalerValue;
    htim.Init.ClockDivision = 0;
    htim.Init.CounterMode = TIM_COUNTERMODE_UP;

    HAL_TIM_Base_Init(&htim);

    /* Enable Timer counter */
    HAL_TIM_Base_Start(&htim);
}

void DebugUARTConfig( uint32_t baud, uint32_t dataLen, uint32_t stopBits, uint32_t parity )
{
    gDbgUartPort.hUart->Instance          = DBG_IF_UART;
    gDbgUartPort.hUart->Init.BaudRate     = baud;
    gDbgUartPort.hUart->Init.WordLength   = dataLen;
    gDbgUartPort.hUart->Init.StopBits     = stopBits;
    gDbgUartPort.hUart->Init.Parity       = parity;
    gDbgUartPort.hUart->Init.HwFlowCtl    = UART_HWCONTROL_NONE;
    gDbgUartPort.hUart->Init.Mode         = UART_MODE_TX_RX;
    gDbgUartPort.hUart->Init.OverSampling = UART_OVERSAMPLING_16;

    /* Note that HAL_UART_Init() internally calls HAL_UART_MspInit() to configure the hardware interfaces */
    HAL_UART_Init(gDbgUartPort.hUart);

#if 0

#ifdef UART_DMA_ENABLE
    /*## -1- Enable DMA2 clock #################################################*/
    __HAL_RCC_DMA2_CLK_ENABLE();

    /*##-6- Configure NVIC for DMA transfer complete/error interrupts ##########*/
    /* Set Interrupt Group Priority */
    HAL_NVIC_SetPriority(DMA_INSTANCE_IRQ, DBG_UART_DMA_INT_PREEMPT_PRIORITY, DBG_UART_TX_DMA_INT_SUB_PRIORITY);

    /* Enable the DMA STREAM global Interrupt */
    HAL_NVIC_EnableIRQ(DMA_INSTANCE_IRQ);
#endif

    /* Enable the USART Interrupt */
    HAL_NVIC_SetPriority(DBG_UART_IRQChannel, DBG_UART_INT_PREEMPT_PRIORITY, DBG_UART_INT_SUB_PRIORITY);
    HAL_NVIC_EnableIRQ(DBG_UART_IRQChannel);
    //NVIC_InitStructure.NVIC_IRQChannel = DBG_UART_IRQChannel;
    //NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = DBG_UART_INT_PREEMPT_PRIORITY;
    //NVIC_InitStructure.NVIC_IRQChannelSubPriority = DBG_UART_INT_SUB_PRIORITY;
    //NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    //NVIC_Init(&NVIC_InitStructure);

    /* Enable the USART Receive interrupt: this interrupt is generated when the
     USART receive data register is not empty. Transmit interrupt is enabled in write routine */
    //USART_ITConfig(DBG_IF_UART, USART_IT_RXNE, ENABLE);
    __HAL_UART_ENABLE_IT(_handle, USART_IT_RXNE);

    /* Configure the selected USART port */
    USART_Init(DBG_IF_UART, &USART_InitStructure);

    /* Enable the selected USART */
    USART_Cmd(DBG_IF_UART, ENABLE);
#endif
}
