==> sensorplatforms/open-sensor-platform/embedded/projects/osp-steval-mki109v2/sources/boardsupport/hw_setup.c <==
#include "common.h"
#include "hw_setup.h"
#define RCC_APB2Periph_ALLGPIO             (RCC_APB2Periph_GPIOA \
                                          | RCC_APB2Periph_GPIOB \
                                          | RCC_APB2Periph_GPIOC \
                                          | RCC_APB2Periph_GPIOD)

void LED_Init( void )
{
    GPIO_InitTypeDef  GPIO_InitStructure;
    uint8_t index;

    if (NUM_LEDS > 0)
    {
        for (index = 0; index < NUM_LEDS; index++)
        {
            RCC_APB2PeriphClockCmd( DiagLEDs[index].rccPeriph, ENABLE );
            LED_Off(index);
            GPIO_InitStructure.GPIO_Pin = DiagLEDs[index].pin;
            GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
            GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
            GPIO_Init(DiagLEDs[index].grp, &GPIO_InitStructure);
        }
    }
}

void RTC_Configuration( void )
{
    /* System resumed from STANDBY mode */
    if(gExitFromStandby)
    {
        /* Wait for RTC APB registers synchronisation */
        RTC_WaitForSynchro();
        /* No need to configure the RTC as the RTC configuration(clock source, enable,
        prescaler,...) is kept after wake-up from STANDBY */
    }
    else
    {/* StandBy flag is not set */
        /* Select HSE as RTC Clock Source */
#if defined USE_HSI_CLOCK || defined RTC_ON_LSI_CLOCK
        RCC_RTCCLKConfig(RCC_RTCCLKSource_LSI);
#elif defined RTC_ON_LSE_CLOCK
        RCC_LSEConfig(RCC_LSE_ON);
        /* Wait till LSE is ready */
        while (RCC_GetFlagStatus(RCC_FLAG_LSERDY) == RESET);
        RCC_RTCCLKConfig(RCC_RTCCLKSource_LSE);
#else
        RCC_RTCCLKConfig(RCC_RTCCLKSource_HSE_Div128);
#endif

        /* Enable RTC Clock */
        RCC_RTCCLKCmd(ENABLE);

        /* Wait for RTC registers synchronization */
        RTC_WaitForSynchro();

        /* Wait until last write operation on RTC registers has finished */
        RTC_WaitForLastTask();

        /* Set RTC prescaler */
        RTC_SetPrescaler(RTC_PRESCALAR); /* RTC period = RTCCLK/(RTC_PRESCALAR+1) */

        /* Wait until last write operation on RTC registers has finished */
        RTC_WaitForLastTask();

        /* Reset the counter to 0 */
        RTC_SetCounter(0);

        /* Wait until last write operation on RTC registers has finished */
        RTC_WaitForLastTask();
    }
}

void DebugUARTConfig( uint32_t baud, uint32_t dataLen, uint32_t stopBits, uint32_t parity )
{
    USART_InitTypeDef USART_InitStructure;
    GPIO_InitTypeDef GPIO_InitStructure;
    NVIC_InitTypeDef NVIC_InitStructure;

    /* Setup the USART configuration structure */
    USART_InitStructure.USART_BaudRate = baud;
    USART_InitStructure.USART_WordLength = dataLen;
    USART_InitStructure.USART_StopBits = stopBits;
    USART_InitStructure.USART_Parity = parity;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;

    /* Need to enable the GPIO and USART clocks first */
    RCC_APB2PeriphClockCmd( RCC_Periph_UART_GPIO, ENABLE );
    if (DBG_IF_UART == USART1)
    {
        RCC_APB2PeriphClockCmd( RCC_Periph_DBG_UART, ENABLE );
    }
    else
    {
        RCC_APB1PeriphClockCmd( RCC_Periph_DBG_UART, ENABLE );
    }

    /* Configure USART Tx as alternate function push-pull */
    GPIO_InitStructure.GPIO_Pin = DBG_UART_TX_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_Init(DBG_UART_GPIO_GRP, &GPIO_InitStructure);

    /* Configure USART Rx as input floating */
    GPIO_InitStructure.GPIO_Pin = DBG_UART_RX_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(DBG_UART_GPIO_GRP, &GPIO_InitStructure);

#ifdef UART_DMA_ENABLE
    /* DMA clock enable */
    RCC_AHBPeriphClockCmd(RCC_UART_Periph_DMA, ENABLE);

    DMA_DeInit(DBG_UART_TX_DMA_Channel);

    /* Enable the DMA1 Channel 4 Interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = DBG_UART_TX_DMA_IRQChannel;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = DBG_UART_DMA_INT_PREEMPT_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = DBG_UART_TX_DMA_INT_SUB_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
#endif

    /* Enable the USART Interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = DBG_UART_IRQChannel;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = DBG_UART_INT_PREEMPT_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = DBG_UART_INT_SUB_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    /* Enable the USART Receive interrupt: this interrupt is generated when the
     USART receive data register is not empty. Transmit interrupt is enabled in write routine */
    USART_ITConfig(DBG_IF_UART, USART_IT_RXNE, ENABLE);

    /* Configure the selected USART port */
    USART_Init(DBG_IF_UART, &USART_InitStructure);

    /* Enable the selected USART */
    USART_Cmd(DBG_IF_UART, ENABLE);
}

void UartDMAConfiguration( PortInfo *pPort, uint8_t *pTxBuffer, uint16_t txBufferSize )
{
    DMA_InitTypeDef DMA_InitStructure;

    /* UART TX DMA  Channel (triggered by USART Tx event) Config */
    DMA_InitStructure.DMA_PeripheralBaseAddr = pPort->UartBaseAddress;
    DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)pTxBuffer;
    DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
    DMA_InitStructure.DMA_BufferSize = txBufferSize;
    DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
    DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
    DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;
    DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;
    DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
    DMA_InitStructure.DMA_Priority = DMA_Priority_Low;
    DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
    DMA_Init(pPort->DMAChannel, &DMA_InitStructure);
}
